# TailBox

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  build.bat
Engine/: CMakeLists.txt  CommonStatics.cpp  CommonStatics.h  Core.h  Engine.cpp  Engine.h  EngineMath.cpp  EngineMath.h
Engine/Core/: Event.h  Input.cpp  Input.h  Transform.h
Engine/Editor/: Editor.cpp  Editor.h  EditorCore.cpp  EditorCore.h  Panel.h  ScenePanel.cpp  ScenePanel.h  Viewport.cpp  Viewport.h
Engine/Editor/Window/: DescHeapAllocator.cpp  DescHeapAllocator.h  Window.cpp  Window.h
Engine/Graphics/: CommandContext.cpp  CommandContext.h  D3D12RenderAPI.cpp  D3D12RenderAPI.h  DX12Device.cpp  DX12Device.h  DescriptorHeap.cpp  DescriptorHeap.h  EditorRenderer.cpp  EditorRenderer.h  GpuBuffer.cpp  GpuBuffer.h  GpuResource.h  GraphicsCore.cpp  GraphicsCore.h  InputLayout.cpp  InputLayout.h  Material.cpp  Material.h  MemoryAllocator.cpp  MemoryAllocator.h  Mesh.cpp  Mesh.h  PipelineStateHandler.cpp  PipelineStateHandler.h  RawResourceStorage.cpp  RawResourceStorage.h  RenderAPI.cpp  RenderAPI.h  RenderEnum.h  RenderPass.h  RenderPassForwardRendering.cpp  RenderPassForwardRendering.h  RenderPassManager.cpp  RenderPassManager.h  RenderPassUIRendering.cpp  RenderPassUIRendering.h  Renderer.cpp  Renderer.h  RootSignature.cpp  (+12 more)
Engine/Graphics/DirectX12/: D3D12Struct.h
Engine/Graphics/RenderResource/: MeshRenderResource.cpp  MeshRenderResource.h  ShaderStructure.h  StaticMeshRenderResource.cpp  StaticMeshRenderResource.h
Engine/Graphics/Utility/: IndexDispenser.cpp  IndexDispenser.h  RenderTexture.cpp  RenderTexture.h
Engine/Resources/: BasePS.hlsl  BaseResource.cpp  BaseResource.h  BaseVS.hlsl  Texture.cpp  Texture.h  cube.hlsli  default.hlsli
Engine/Resources/Shader/: BasePS.hlsl  BaseVS.hlsl  CommonCB.hlsli  Material.hlsl  MaterialPS.hlsl  MaterialVS.hlsl
Engine/Scene/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Cube.cpp  Cube.h  CubeActor.cpp  CubeActor.h  Scene.cpp  Scene.h  SceneComponent.cpp  SceneComponent.h  SceneManager.cpp  SceneManager.h  SceneProxy.cpp  SceneProxy.h  StaticMeshComponent.cpp  StaticMeshComponent.h
Engine/Window/: DescHeapAllocator.h  Window.cpp  Window.h
src/App/: launch.cpp
src/AppHelpers/: Helpers.h
